css/dest/wcasia-2020.css
@charset "UTF-8";
/*
Theme Name: WordCamp Asia 2020
Author: Team WordCamp Asia 2020
Author URI: https://wpasia.org
Version: 0.1.0
*/
/* VARIABLES
---------------------------------------*/
/* MIXINS
---------------------------------------*/
/* GLOBAL
---------------------------------------*/
body {
  background: #F5F1E8;
  margin: 0; }

.site {
  overflow: hidden;
  position: relative; }

::selection {
  color: #fff;
  background-color: #0D5ABC; }

hr {
  clear: both;
  margin: 2rem 0;
  padding: 0;
  border: 0;
  height: 1px; }

@media (min-width: 48em) {
  hr {
    margin-top: 3rem;
    margin-bottom: 3rem; } }

@media (min-width: 62em) {
  hr {
    margin-top: 4rem;
    margin-bottom: 4rem; } }

figure, img {
  display: block;
  margin: 0;
  margin-bottom: 1.5rem;
  max-width: 100%;
  height: auto; }

figcaption {
  margin-top: .5rem;
  margin-bottom: 0;
  color: rgba(0, 0, 0, 0.6); }

table {
  width: 100%;
  border-collapse: collapse;
  text-align: left;
  margin-bottom: 1.5rem; }

caption {
  margin-bottom: .5rem; }

td, th {
  padding: .5rem 1rem;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  font-size: 16px;
  font-size: 1rem;
  line-height: 1.5; }

@media (min-width: 48em) {
  td, th {
    padding: 1rem; } }

/* TYPOGRAPHY
---------------------------------------*/
body {
  font-family: "Roboto Slab", serif;
  font-weight: 400;
  font-size: 1em;
  line-height: 1.5625em;
  color: #36393B; }

@media (min-width: 768px) {
  body {
    font-size: 1.125em; } }

h1, h2, h3, h4, h5, h6 {
  font-family: "Rubik", sans-serif;
  font-weight: 700;
  margin-top: 2rem;
  margin-bottom: .5rem;
  line-height: 1.25em; }

h1:first-child, h2:first-child, h3:first-child, h4:first-child {
  margin-top: 0; }

h1 + h2, h2 + h3, h3 + h4 {
  margin-top: .5rem; }

h1 {
  font-size: 3.052em; }

h2 {
  font-size: 2.441em; }

h3 {
  font-size: 1.953em; }

h4 {
  font-size: 1.563em; }

h5 {
  font-size: 1.25em; }

h6 {
  font-size: 1em; }

b, strong {
  font-weight: 700; }

em {
  font-stretch: italic; }

a, a:link, a:visited {
  text-decoration: none;
  color: #E63331;
  word-break: break-word; }

a:active, a:hover {
  text-decoration: none;
  color: #E63331; }

a:focus {
  color: #E63331; }

p {
  margin-top: 0;
  margin-bottom: 1.5rem; }

sup sub {
  font-size: 75%;
  line-height: 0;
  position: relative; }

sup {
  top: -.5em; }

sub {
  bottom: -.25em; }

dl, ol, ul {
  margin-bottom: 1.5rem; }

dl dl, dl ol, dl ul, li, ol dl, ol ol, ol ul, ul dl, ul ol, ul ul {
  margin-bottom: 0; }

li {
  margin-top: .25rem; }

li:first-child {
  margin-top: 0; }

blockquote {
  margin: 0 -1.5rem 1.5rem -1.5rem;
  padding: 1.5rem;
  border-top: 1px solid #f2f2f2;
  border-bottom: 1px solid #f2f2f2; }

blockquote p {
  font-family: "Rubik", sans-serif;
  font-size: 1em;
  line-height: 1.4;
  color: #0D5ABC; }
  blockquote p em {
    font-style: normal; }

blockquote p:last-child {
  font-family: "Roboto Slab", serif;
  font-size: 1em;
  font-style: italic;
  color: #0D5ABC;
  margin-bottom: 0; }

code, pre {
  border: 1px solid #bbc2e7;
  border-top-color: #6675c9;
  border-radius: .1875rem;
  font-size: 14px;
  font-size: .875rem;
  line-height: 1.5;
  color: rgba(0, 0, 0, 0.75);
  font-family: Bitstream Vera Sans Mono, Consolas, Courier, monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  -webkit-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  -moz-tab-size: 2;
  tab-size: 2; }

pre {
  margin: 1.5rem 0;
  padding: 1.5rem;
  overflow: scroll; }

code {
  padding: .125rem .1875rem;
  background-color: #feddde; }

pre code {
  border-radius: 0;
  border: 0;
  padding: 0;
  background: 0; }

/* LAYOUT
---------------------------------------*/
#content, #footer-widgets {
  padding: 2.5rem 1.5rem 0 1.5rem; }

@media (min-width: 48em) {
  #content, #footer-widgets {
    padding: 3rem 2rem 0 2rem; } }

@media (min-width: 62em) {
  #content, #footer-widgets {
    padding: 4.5rem 3rem 0 3rem; } }

#primary {
  max-width: 40rem;
  margin-left: auto;
  margin-right: auto;
  text-align: left; }

#secondary {
  max-width: 50rem;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
  margin-top: 1.5rem; }

#footer-widgets {
  max-width: 50rem;
  margin-left: auto;
  margin-right: auto; }

@media (min-width: 48em) {
  #secondary {
    margin-top: 3rem; } }

@media (min-width: 62em) {
  #secondary {
    margin-top: 4.5rem; } }

#after-header-widgets, #before-content-widgets {
  max-width: 50rem;
  margin-left: auto;
  margin-right: auto;
  text-align: left; }

#content-widgets {
  margin-top: -1.5rem;
  margin-bottom: 1.5rem; }

@media (min-width: 48em) {
  #content-widgets {
    margin-top: -3rem;
    margin-bottom: 3rem; } }

@media (min-width: 62em) {
  #content-widgets {
    margin-top: -4.5rem;
    margin-bottom: 4.5rem; } }

/* ALIGNWIDE
---------------------------------------*/
@media screen and (min-width: 768px) {
  #tix, #tggr-media-item-container, #tix-attendees {
    margin-left: -2.5rem;
    margin-right: -2.5rem; } }

@media screen and (min-width: 1024px) {
  #tix, #tggr-media-item-container, #tix-attendees {
    margin-left: -10rem;
    margin-right: -10rem; } }

/* FORM
---------------------------------------*/
button, html input[type="button"], input[type="reset"], input[type="submit"] {
  background-color: #E63331;
  background-image: none;
  box-sizing: border-box;
  box-shadow: none;
  border: none;
  border-radius: 0;
  color: #fff;
  font-family: "Roboto Slab", serif;
  font-weight: 600;
  font-size: 1rem;
  padding: 1rem 2rem;
  text-transform: uppercase;
  text-shadow: none;
  transition: background-color .3s; }
/* ... */

